<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/user_name_label"
    style="?android:listSeparatorTextViewStyle" />
  <EditText android:id="@+id/user_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/user_name_hint" />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/user_password_label"
    style="?android:listSeparatorTextViewStyle" />
  <EditText android:id="@+id/user_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
</LinearLayout>