<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/post_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/button_top_bg"
            android:height="50dp"
            android:minHeight="50dp"
            android:text="Cancel"
            android:textColor="@color/button_txt_color" />

        <Button
            android:id="@+id/createPostButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/button_below_bg"
            android:height="50dp"
            android:minHeight="50dp"
            android:text="@string/create_post"
            android:textColor="@color/button_txt_color"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout5" >

        <EditText
            android:id="@+id/txtType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="8"
            android:height="40dp"
            android:hint="@string/post_type_hint"
            android:minHeight="40dp"
            android:textSize="13dp" />

        <Button
            android:id="@+id/show_dialog_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:height="40dp"
            android:minHeight="40dp"
            android:text="@string/show_dialog" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3" >

        <EditText
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="8"
            android:height="40dp"
            android:hint="@string/post_time_hint"
            android:minHeight="40dp"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btnTimePicker"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:height="40dp"
            android:minHeight="40dp"
            android:text="@string/post_time_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2" >

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="8"
            android:height="40dp"
            android:hint="@string/post_date_hint"
            android:minHeight="40dp"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btnDatePicker"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:height="40dp"
            android:minHeight="40dp"
            android:text="@string/post_date_label" />
    </LinearLayout>

    <EditText
        android:id="@+id/post_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:height="30dp"
        android:hint="@string/post_description_hint"
        android:minHeight="30dp"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/post_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:height="30dp"
        android:hint="@string/post_location_hint"
        android:minHeight="30dp"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/post_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:height="30dp"
        android:hint="@string/post_author_hint"
        android:minHeight="30dp"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:height="30dp"
        android:hint="@string/post_title_hint"
        android:minHeight="30dp"
        android:textSize="13dp"
        android:focusable="true"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/post_title"
        android:layout_centerHorizontal="true"
        android:text="@string/post_title_label"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/post_author"
        android:layout_centerHorizontal="true"
        android:text="@string/post_author_label"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/post_location"
        android:layout_centerHorizontal="true"
        android:text="@string/post_location_label"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/post_description"
        android:layout_centerHorizontal="true"
        android:text="@string/post_description_label"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="New Post"
        android:textSize="24dp"
        android:textStyle="bold" />

</RelativeLayout>