<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/studyGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_groups"
            android:layout_weight="1"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:layout_weight="1"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:layout_weight="1"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/thisWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_week"
            android:layout_weight="1"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dip"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/searchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/search_text_hint" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <!--<RelativeLayout-->
        <!--android:id="@+id/relativeTextview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginLeft="4dip"-->
        <!--android:layout_marginRight="7dip"-->
        <!--android:scaleType="fitXY"-->
        <!--android:weightSum="100"-->
        <!--&gt;-->
        <!--<android.support.v4.view.ViewPager-->
            <!--android:id="@+id/reviewpager"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginLeft="4dip"-->
            <!--android:layout_marginRight="7dip"-->
            <!--android:scaleType="fitXY"-->
            <!--android:weightSum="100"/>-->
    <!--</RelativeLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="7dip"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100" >

        <android.support.v4.view.ViewPager
            android:id="@+id/reviewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginRight="8dip"
            android:layout_weight="300"
            android:scaleType="fitXY"
            />

        <!--<android.support.v4.view.ViewPager-->
            <!--android:id="@+id/myViewPager"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"/>-->

        <!--<ImageView-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="150dp"-->
            <!--android:layout_marginRight="8dip"-->
            <!--android:layout_weight="300"-->
            <!--android:scaleType="fitXY"-->
            <!--android:src="@drawable/foothill" />-->
    </LinearLayout>

</LinearLayout>